# Configra

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vale.ini  ADR.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  LICENSE-APACHE  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  SSOT.md  WORKLOG.md  deny.toml  dprint.json  justfile  linter-output.json  llms.txt  rust-toolchain.toml
.claude/commands/: spec-kitty.tasks.md
.codex/prompts/: spec-kitty.tasks.md
.forge/: PR_COMPARISON.md  PR_CONTAINER.md  PR_STABILIZE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/hooks/: security-guard.sh
.github/workflows/: alert-sync-issues.yml  audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql.yml  deny.yml  docs-deploy.yml  docs.yml  policy-gate.yml  quality-gate.yml  release-attestation.yml  release-drafter.yml  release.yml  reusable-policy-gate.yml  sbom.yml  scorecard.yml  security-guard-hook-audit.yml  security-guard.yml  self-merge-gate.yml  slsa-provenance.yml  tag-automation.yml  trufflehog.yml
.grade-reports/: build.raw  fmt.raw
.kittify/: .dashboard
.serena/: project.yml
.serena/memories/: atomsbot-cleanup-done.md
ABSORBED-FROM/: README.md
ABSORBED-FROM/Conft/: README.md
ABSORBED-FROM/Settly/: README.md
ABSORBED-FROM/pheno-config-local/: README.md
ABSORBED-FROM/pheno-subcrate-config-core-deleted/: README.md
ABSORBED-FROM/pheno-subcrate-config-loader/: README.md
ABSORBED-FROM/pheno-subcrate-shared-config/: README.md
ABSORBED-FROM/phenotype-config/: README.md
ABSORBED-FROM/phenotype-config-subcrate-settly/: README.md
archive/PhenoLang-config-2026-06-20/: ORIGIN.md
contracts/: stage-gates-v1.contract.json
crates/config-schema/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/config-schema/src/: lib.rs
crates/configra-config/: Cargo.toml  configra.example.json  configra.example.toml  default_2015066503821423017_0_91152.profraw  default_8596380965134867355_0_91152.profraw
crates/configra-config/src/: lib.rs
crates/configra-ops/: Cargo.toml  README.md
crates/configra-ops/src/: correlation.rs  health.rs  lib.rs  logging.rs  metrics.rs  shutdown.rs
crates/pheno-config/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  WORKLOG.md  default_2015066503821423017_0_91194.profraw  default_8596380965134867355_0_91194.profraw  llms.txt
crates/pheno-config/examples/: cascade.rs  quickstart.rs  validation.rs
crates/pheno-config/src/: lib.rs  secret.rs
crates/pheno-config/tests/: toml_merge_test.rs  tracing_test.rs
crates/pheno-ffi-go/: Cargo.toml  crates_pheno-ffi-go.json  crates_pheno-ffi-python.json  pheno-cli.json  pheno-core.json  pheno-crypto.json  pheno-db.json
crates/pheno-ffi-go/src/: lib.rs
crates/pheno-ffi-python/: Cargo.toml  crates_pheno-ffi-go.json  crates_pheno-ffi-python.json  pheno-cli.json  pheno-core.json  pheno-crypto.json  pheno-db.json
crates/pheno-ffi-python/src/: lib.rs
crates/pheno-ffi-python/src/adapters/: mod.rs
crates/pheno-ffi-python/src/adapters/inbound/: mod.rs
crates/pheno-ffi-python/src/adapters/inbound/python/: mod.rs
crates/pheno-ffi-python/src/application/: mod.rs
crates/pheno-ffi-python/src/application/dto/: mod.rs
crates/pheno-ffi-python/src/application/use_cases/: mod.rs
crates/pheno-ffi-python/src/domain/: mod.rs
crates/pheno-ffi-python/src/domain/dto/: mod.rs
crates/pheno-ffi-python/src/domain/entities/: mod.rs
crates/phenoctl/: Cargo.toml
crates/phenoctl/src/: main.rs
crates/phenoctl/tests/: integration.rs
crates/phenotype-config-loader/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/phenotype-config-loader/src/: lib.rs
crates/settly/: CANONICAL.md  CANONICAL_FROM_PHENO_SHARED_CONFIG.md  Cargo.toml  README.md  STANDARDS.md
crates/settly/src/: crypto.rs  (+2 more)
docs/: .gitignore  ARCHITECTURE.md  CONFIG.md  README.md  SPEC.md  container-migration-plan.md  deploy.md  package-lock.json  package.json  policy-gates-and-review-bots.md  polyrepo-governance-blueprint.md  release-funnel-governance.md  slsa.md
docs/.vitepress/: config.mjs  config.mts
docs/compatibility/: strict-mode-command-matrix.csv  strict-mode-command-matrix.md
docs/guides/: stage-gates-contract.md
docs/migrations/: 2026-06-18-from-conft.md  2026-06-18-from-pheno-config.md  2026-06-18-from-phenotype-config.md  2026-06-18-from-settly-config-py.md  2026-06-18-from-settly-config.md
docs/phenotype-config-absorbed/: slsa.md
docs/remediation/: OBSERVABILITY.md  OPS.md
kitty-specs/configra-workflow-pin/: spec.md
kitty-specs/harden-trufflehog-workflow/: spec.md
pheno-cli/: Cargo.toml  crates_pheno-ffi-go.json  crates_pheno-ffi-python.json  pheno-cli.json  pheno-core.json  pheno-crypto.json  pheno-db.json
pheno-cli/src/: main.rs
pheno-core/: Cargo.toml
pheno-core/src/: lib.rs
pheno-crypto/: Cargo.toml  crates_pheno-ffi-go.json  crates_pheno-ffi-python.json  pheno-cli.json  pheno-core.json  pheno-crypto.json  pheno-db.json
pheno-crypto/src/: lib.rs
pheno-db/: Cargo.toml  crates_pheno-ffi-go.json  crates_pheno-ffi-python.json  pheno-cli.json  pheno-core.json  pheno-crypto.json  pheno-db.json
pheno-db/src/: lib.rs
sbom/: crates_pheno-ffi-go.cdx.json  crates_pheno-ffi-python.cdx.json  pheno-cli.cdx.json  pheno-core.cdx.json  pheno-crypto.cdx.json  pheno-db.cdx.json
scripts/: quality-gate.sh  security-guard.sh  validate_stage_gates_contract.sh
scripts/governance/: enforce_policy_gate.py  resolve_stage_requirements.py  rollout_policy_gate_templates.sh
templates/: .coderabbit.yaml  stage-gates.yml
templates/governance/: README.md  ci-required-jobs.yaml  merge-eligibility-token-schema.yaml  pr-policy-gates.yaml  release-transition-matrix.yaml
templates/template-sync/: dependency-fallbacks.csv
worklogs/: ARCHITECTURE.md
(+51 files in other folders)
