[workspace]
resolver = "2"
members = ["pheno-core", "pheno-db", "pheno-crypto", "pheno-cli", "crates/pheno-ffi-python", "crates/pheno-ffi-go"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first configuration, feature flags, secrets, and version tracking for Phenotype projects"
rust-version = "1.75"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
