[workspace]
resolver = "2"
members = ["crates/settly", "crates/pheno-config", "crates/config-schema", "crates/configra-config"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["KooshaPari"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tempfile = "3"
criterion = "0.5"
tracing = "0.1"
