[package]
name = "pheno-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for managing phenotype configurations and feature flags"

[[bin]]
name = "phenoctl"
path = "src/main.rs"

[dependencies]
pheno-core = { path = "../pheno-core", version = "0.1.0" }
pheno-db = { path = "../pheno-db", version = "0.1.0" }
pheno-crypto = { path = "../pheno-crypto", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color", "all-widgets", "macros", "layout-cache"] }
crossterm = "0.29"
hex = "0.4"
rpassword = "7"
