[package]
name = "pheno-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and error handling for phenotype-config"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
