[package]
name = "pheno-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed storage for phenotype configurations"

[dependencies]
pheno-core = { path = "../pheno-core", version = "0.1.0" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
