[package]
name = "config-schema"
version = "0.1.0"
description = "Extensible configuration schema validation for JSON-based configs"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = true

[dependencies]
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
