[package]
name = "pheno-ffi-go"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Go FFI bindings for phenotype-config"

[lib]
name = "pheno_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pheno-core = { path = "../../pheno-core", version = "0.1.0" }
pheno-db = { path = "../../pheno-db", version = "0.1.0" }
pheno-crypto = { path = "../../pheno-crypto", version = "0.1.0" }
chrono = "0.4"
hex = "0.4"
