[package]
name = "pheno-ffi-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python FFI bindings for phenotype-config"

[lib]
name = "phenotype_config"
crate-type = ["cdylib"]

[dependencies]
pheno-core = { path = "../../pheno-core", version = "0.1.0" }
pheno-db = { path = "../../pheno-db", version = "0.1.0" }
pheno-crypto = { path = "../../pheno-crypto", version = "0.1.0" }
pyo3 = { version = "0.22", features = ["extension-module"] }
chrono = "0.4"
hex = "0.4"
