[package]
name = "phenoctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Configra CLI for configuration operations."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
toml = { workspace = true }

config-schema = { path = "../config-schema" }
settly = { path = "../settly" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
