[package]
name = "phenotype-config-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration loading utilities for the Phenotype ecosystem. Absorbed from phenotype-config per ADR-031 (L5-110)."
repository = "https://github.com/KooshaPari/Configra"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
